# candidate-document-verification-AI-agent

./: .gitignore  .samignore  PLAN.md  README.md  SCRIPTS.md  add-dependency.sh  build.sh  cleanup-stack.sh  deploy.sh  export-deps.sh  local-test.sh  main.py  pyproject.toml  requirements.txt  serve.py
infra/: prod-template.yaml
infra/migrations/: 001_initial.sql
src/recruitment/: __init__.py  app.py
src/recruitment/dcp/: routes.py
src/recruitment/dcp/agents/: categorizer.py  experience.py  payslip.py
src/recruitment/dcp/controllers/: candidate_verification_controller.py
src/recruitment/dcp/handlers/: process_verification.py
src/recruitment/dcp/pipeline/: batch.py  graph.py  state.py
src/recruitment/dcp/types/: documents.py  extraction.py  results.py
src/recruitment/shared/: config.py  logging.py
src/recruitment/shared/services/: database.py  llm.py  storage.py  text_extractor.py
